Added databases for every microservice.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,24 @@ services:
       - "onteoncc-master"
     ports:
       - "8021:8021"
-  db:
+  company-db:
     image: postgres
     environment:
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
+  product-db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5433:5432"
+  report-db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5434:5432"
   rabbitmq:
     image: rabbitmq:3.9-management
     ports:
