--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://db:5432/postgres
+spring.datasource.url= jdbc:postgresql://company-db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
