--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,11 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
+  rabbitmq:
+    image: rabbitmq:3.9-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
   onteoncli:
     profiles: ["cli-only"]
     image: onteon/onteoncli-with-demo-apps:1.2.0
