--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
