--- a/frontend/onteon/conf.yml
+++ b/frontend/onteon/conf.yml
@@ -1,6 +1,6 @@
 app:
-  name: 'monolith'
-  version: '1.1.0'
+  name: 'frontend'
+  version: '1.0.0'
   appType: 'standard'
   procType: 'native'
   processProvider:
@@ -21,13 +21,13 @@ app:
       - '${ont_app_path}/bin/conf/server.xml'
     variables:
   serviceRepository:
-    healthCheckUrl: 'http://localhost:${ont_port_2}/is-alive'
+    healthCheckUrl: 'http://localhost:${ont_port_2}'
     entities:
       - entity:
           priority: 1
           port: ${ont_port_2}
           protocol:
             type: 'HTTP'
-            version: '1.1'
+            version: '2.0'
           isExternal: true
           isInternal: true
