--- a/report/onteon/conf.yml
+++ b/report/onteon/conf.yml
@@ -1,31 +1,28 @@
 app:
   name: 'report'
-  version: '1.1.1'
+  version: '1.1.2'
   appType: 'standard'
   procType: 'native'
   processProvider:
-    name: 'GenericOsProcessProviderImpl'
+    name: 'JVMOsProcessProviderImpl'
     version: '1.0.0'
     executable:
       start:
-        command: '${ont_app_path}/bin/bin/catalina.sh run'
-        successLine: 'Server startup'
-      stop:
-        command: '${ont_app_path}/bin/bin/catalina.sh stop'
-      terminate:
-        command: '${ont_app_path}/bin/bin/catalina.sh stop -force'
+        path: '${ont_app_path}/bin'
+        startJvmCommand: 'java -jar -Dserver.port=${ont_port_1}'
+        successLine: 'Started ReportApplication'
+        executableFileName: 'report.jar'
   placeHolder:
     name: 'PlaceHolderManagerImpl'
     version: '1.0.0'
     filesToReplace:
-      - '${ont_app_path}/bin/conf/server.xml'
     variables:
   serviceRepository:
-    healthCheckUrl: 'http://localhost:${ont_port_2}/is-alive'
+    healthCheckUrl: 'http://localhost:${ont_port_1}/is-alive'
     entities:
       - entity:
           priority: 1
-          port: ${ont_port_2}
+          port: ${ont_port_1}
           protocol:
             type: 'HTTP'
             version: '1.1'
